# sure-infra-challenge

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  main.sh
scripts/utils/: createBuckets.sh  requirements.txt  setupLocalEnv.sh
src/: README.md  main.py
src/helpers/aws/: s3.py
src/tests/: test_s3.py
