[tool.poetry]
name = "sure-infra-challenge"
version = "0.1.0"
description = ""
authors = ["Kacee Weaver"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.115"
mypy-boto3-s3 = "^1.34.105"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
moto = "^5.0.8"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
